--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
         "@fontsource/raleway": "^4.5.0",
         "@fontsource/roboto": "^4.5.0",
         "apexcharts": "^3.27.3",
+        "axios": "^0.21.1",
+        "bootstrap": "^5.1.3",
         "classnames": "2.3.1",
         "framer-motion": "^4.1.17",
         "match-sorter": "6.3.0",
         "moment": "2.29.1",
-        "axios": "^0.21.1",
         "node-sass": "5.0.0",
         "nouislider": "15.0.0",
         "react": "17.0.2",
@@ -35,6 +36,8 @@
         "react-swipeable-views": "0.13.9",
         "react-table": "7.7.0",
         "react-tagsinput": "3.19.0",
+        "react-wow": "^1.0.0",
+        "reactstrap": "^9.0.1",
         "stylis": "^4.0.10",
         "stylis-plugin-rtl": "^2.1.0"
     },
