--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "bootstrap": "^5.1.3",
         "classnames": "2.3.1",
         "framer-motion": "^4.1.17",
+        "jwt-decode": "^3.1.2",
         "match-sorter": "6.3.0",
         "moment": "2.29.1",
         "node-sass": "5.0.0",
@@ -31,6 +32,7 @@
         "react-github-btn": "^1.2.1",
         "react-icons": "^4.2.0",
         "react-jvectormap": "0.0.16",
+        "react-notifications": "^1.7.3",
         "react-router-dom": "5.2.0",
         "react-scripts": "4.0.3",
         "react-swipeable-views": "0.13.9",
