--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "react-router-dom": "5.2.0",
         "react-scripts": "4.0.3",
         "react-swipeable-views": "0.13.9",
-        "react-table": "7.7.0",
+        "react-table": "^7.7.0",
         "react-tagsinput": "3.19.0",
         "react-wow": "^1.0.0",
         "reactstrap": "^9.0.1",
@@ -60,6 +60,7 @@
     "devDependencies": {
         "@babel/plugin-transform-react-jsx-source": "^7.14.5",
         "@babel/preset-react": "^7.16.7",
+        "@heroicons/react": "^1.0.5",
         "eslint-config-prettier": "8.3.0",
         "eslint-plugin-prettier": "3.4.0",
         "gulp": "4.0.2",
